2006-08-31 Benoit Grégoire  <bock@step.polymtl.ca>
	* Server.php:  Make sure getCurrentServer returns the default server if the hostname isn't recognised.
	* Content manager:
		-Allow deleting simple (trivial) but persistent content
		-Remove the sponsor info field from Content Metadata.  Best practices is now to use the project info field to show this information.
	* Add the necessary schema constraints to allow manually deleting networks, nodes and users.  Be carefull, removing any of theses will remove all traces of connection statistics as well.  You've been warned.
	* Do not display the network in the login interface if there is only one.
	* Add a pseudo-random content ordering mode.  Pick content elements randomly, but do not display the same content twice untill all content has been seen.
	* Allow setting a title but not displaying it (very usefull for reusable content)
	
2006-08-29 Max Horváth <max.horvath@maxspot.de>
	* Cleaned up PHPdoc tags
	* Updated german translation
	* Updated portuguese translation, thanks to Gabriel Hahmann
	* Added spanish translation, thanks to Ricardo Jose Guevara Ochoa

2006-08-28 Benoit Grégoire  <bock@step.polymtl.ca>
	* Add SimplePicture content type
	* Fix #225 (For both nodes and networks)

2006-08-28 Max Horváth <max.horvath@maxspot.de>
	* Integrated KML node list export
	* Integrated PDF node list export
	* Updated Sprintf formatted strings in some Smarty templates

2006-08-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* clickthrough.php, HyperLink.php:  Implement working hyperlink clickthrough tracking (no reporting yet).
	  Works for Langstring, FlickrPhotoStream, Picture, RssAggregator and their subclasses.
	* Make HTMLeditor inherit from Langstring.  Allowed a massive reduction of line count and will stop the codebases from needlessly drifting apart.
	* Do not log content displayed as metadata, and log their clickthrough as the parent's.

2006-08-27 François Proulx <francois.proulx@gmail.com>